triffnix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triffnix
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 80
      targetPort: 8080
  selector:
    app: triffnix
